- General:  (MBaker)                            - Modified Excel2007 Writer to default preCalculateFormulas to false
                                                  Note that autosize columns will still recalculate affected formulae internally


Fixed in develop branch for release v1.7.9:
- Feature:  (MBaker)    Include charts option for HTML Writer
- Feature:  (MBaker)    Added composer file
- Feature:  (MBaker)    Added getStyle() method to Cell object
- Bugfix:   (Asker)     Work item 18777  - Error in PHPEXCEL/Calculation.php script on line 2976 (stack pop check)
- Bugfix:   (MBaker)    Work item 18794  - CSV files without a file extension being identified as HTML
- Bugfix:   (AndreKR)   Work item GH-66  - Wrong check for maximum number of rows in Excel5 Writer
- Bugfix:   (MBaker)    Work item GH-67  - Cache directory for DiscISAM cache storage cannot be set
- Bugfix:   (MBaker)    Work item 17976  - Fix to Excel2007 Reader for hyperlinks with an anchor fragment (following a #), otherwise they were treated as sheet references
- Bugfix:   (MBaker)    Work item 18963  - getSheetNames() fails on numeric (floating point style) names with trailing zeroes
- Bugfix:   (MBaker)    Work item GH-130 - Single cell print area
- General:  (kea)       Work item GH-69  - Improved AdvancedValueBinder for currency
- General:  (MBaker)    Work items 17936 and 17840 - Fix for environments where there is no access to /tmp but to upload_tmp_dir
                        Provided an option to set the sys_get_temp_dir() call to use the upload_tmp_dir; though by default the standard temp directory will still be used
- General:  (amironov ) Work item GH-84  - Search style by identity in PHPExcel_Worksheet::duplicateStyle()
- General:  (karak)     Work item GH-85  - Fill SheetView IO in Excel5
- General:  (cfhay)     Work item 18958  - Memory and Speed improvements in PHPExcel_Reader_Excel5